--- a/calc/mainwindow.ui
+++ b/calc/mainwindow.ui
@@ -19,20 +19,15 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>241</width>
+      <width>231</width>
       <height>61</height>
      </rect>
     </property>
-    <property name="styleSheet">
-     <string notr="true">QLabel {
-  qproperty-alignment:  'AlignVCenter | AlignRight';
-  border: 1px solid gray;
-}
-
-background-color : white;</string>
-    </property>
     <property name="text">
      <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
    <widget class="QPushButton" name="clearButton">
